--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,4 +4,6 @@ python-multipart==0.0.6
 websockets==12.0
 pydantic==2.5.0
 python-json-logger==2.0.7
-aiofiles==23.2.1 
+aiofiles==23.2.1
+aiohttp==3.9.1
+jsonpath-ng==1.6.1 
