--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,12 @@
 fastapi==0.104.1
+# starlette==0.27.0
 uvicorn==0.24.0
 python-multipart==0.0.6
 websockets==12.0
-pydantic==2.5.0
+pydantic==2.5.3
 python-json-logger==2.0.7
 aiofiles==23.2.1
 aiohttp==3.9.1
 jsonpath-ng==1.6.1 
+requests==2.32.3
+httpx==0.27.2
