--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.0",
+    "@mui/lab": "^5.0.0-alpha.165",
     "@mui/material": "^5.14.0",
+    "@mui/x-tree-view": "^8.9.0",
     "@types/node": "^16.18.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
