--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,3 +10,10 @@ aiohttp==3.9.1
 jsonpath-ng==1.6.1 
 requests==2.32.3
 httpx==0.27.2
+# NLU 관련 의존성
+sqlalchemy==2.0.23
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+scikit-learn==1.3.2
+numpy==1.25.2
+pandas==2.1.4
