--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,7 @@ aiohttp==3.9.1
 jsonpath-ng==1.6.1 
 requests==2.32.3
 httpx==0.27.2
+aioredis==2.0.1
 # NLU 관련 의존성
 sqlalchemy==2.0.23
 python-jose[cryptography]==3.3.0
